Increase memory for `clean #tasks on #testProject with local cache (parallel: #parallel)`