@@ -149,11 +149,7 @@ class TaskOutputCachingJavaPerformanceTest extends AbstractTaskOutputCachingPerf
             runner.args += "--parallel"
         }
 
-        File logDir = new File(temporaryFolder.testDirectory, "${System.currentTimeMillis()}")
-        logDir.mkdirs()
-        File log = new File(logDir, "log.txt")
-
-        runner.gradleOpts = ["-Xloggc:${log.absolutePath}", '-XX:+PrintGCDateStamps', '-XX:+PrintFlagsFinal']
+        runner.gradleOpts = ["-Xms4g", "-Xmx4g"]
 
         pushToRemote = false
         runner.addBuildExperimentListener(touchCacheArtifacts())
